<resources>
  <string name="app_name">Word Counter</string>
  <string name="word_count">0</string>
  <string name="text_input">Enter text</string>
  <string name="count_words_button">Count Words</string>
  <string name="count_text">Word count:</string>
  <string name="word_count_text">0</string>
  <string name="action_about">About</string>
  <string name="action_settings">Settings</string>
  <string name="about_activity_text">Chris Marshall</string>
  <string name="settings_activity_text">Feature Coming Soon</string>
  <string name="enter_text">Enter Text to Count</string>
  <string name="ordered_words_btn">Get Occurrences</string>
</resources>
